--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 button{
     background-color: aqua;
 }
+
+body{
+    background-image: url("https://cdn.mos.cms.futurecdn.net/z6ia6LxLhDKM62yiQwvEm3.jpg");
+    color: red;
+}
